--- a/Flex_columns/styles.css
+++ b/Flex_columns/styles.css
@@ -1,9 +1,34 @@
+*{
+    margin: 0;
+    padding: 0;
+    
+}
+body{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
 .row{
     display: flex;
     gap: 10px;
+    width: auto;
+    justify-content: space-between;
+    padding: 0 10px;
+}
+
+.col, .col-2, .col-3{
+    background-color: cadetblue;
+    height: 50px;
+    width: 100vw;
+
 }
 
 .col{
-    background-color: cadetblue;
-    height: 50px;
+    flex: 1;
+}
+.col-2{
+    flex: 2;
+}
+.col-3{
+    flex: 3;
 }
